# AG

./: .env.example  .gitignore  CLAUDE.md  PRD.md  QA.md  README.md  Spec.md  docker-compose.yml  lixiang.md  pingshen1.md  pingshen2.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
configs/prompts/: answer.md  critic.md  executor.md  extract.md  planner.md
configs/schema/: domain_v0.yaml  reasoning_chain_v1.json
data/pilot/: MANIFEST.template.yaml  MANIFEST.yaml  README.md
data/processed/: audit_chains.jsonl  pilot_chunks.jsonl  pilot_triples.jsonl  review_queue.jsonl  seed_triples.jsonl
data/raw/: doc_01_apex_holdings.md  doc_02_novatech.md  doc_03_suppliers.md  doc_04_elena_varga.md  doc_05_helix.md  doc_06_ma_event.md
docs/: ARCHITECTURE.md  ENTERPRISE_READINESS.md  EXTERNAL_RUNTIMES.md  G1_review.md  IMPORTANT.md  REAL_DOMAIN_PLAYBOOK.md  alerts.example.yml  ops-runbook.md
evals/: judge.py  run.py
evals/baseline/: README.md
evals/datasets/: ANNOTATION_SPEC.md  GOLD_SIGNOFF.md  dev.jsonl  g2_all.jsonl  g2_dataset_summary.json  g2_heldout.jsonl  g2_partial.jsonl  guardrail.jsonl  poc_cases.jsonl  review_queue_gold.jsonl
plan/: README.md  roadmap.md
plan/engineering/: cicd-observability.md  repo-structure.md  rules.md  tech-stack.md  testing-strategy.md
plan/governance/: risk-register.md  team-raci.md
plan/phases/: g1-to-g2-transition.md  p5-ui-01-vue-refactor.md  phase-1-poc.md  phase-2-mvp.md  phase-3-optimization.md  phase-4-pilot.md  phase-5-scale.md
plan/workstreams/: agent-orchestration.md  api-and-ui.md  evaluation.md  knowledge-graph.md  retrieval.md
reports/: G1_live_llm_memo.md  G1_review.md  G1_to_G2_closeout.md  G1_to_G2_status.json  G2_review.json  G2_review.md  g2_dev_badcase.json  g2_dev_eval.json  g2_dev_eval.md
scripts/: acceptance_gate.sh  bootstrap_poc.sh  check_code_metrics.py  g1_to_g2_gate.sh  g2_formal_eval.sh  generate_pilot_corpus.py  import_real_corpus.sh  llm_live_rerun.sh  neo4j_regression.sh  p2_ev_kg_pipeline.sh  p3_ev_offline.py  p3_guardrail_and_load.py  p3_load_http.py  qdrant_regression.sh  sample_audit.py  sample_gold_for_review.py  validate_pilot_corpus.sh  verify_all.sh
src/agentic_graphrag/: __init__.py  __main__.py  cli.py  config.py
tests/unit/: test_agent_offline.py  test_answer_generation.py  test_api_errors_and_service.py  test_api_query.py  test_audit_tenant_cache_isolation.py  test_baseline_rag.py  test_bilingual_ma_parity.py  test_checkpointer.py  test_chitchat.py  test_citations.py  test_contracts.py  test_critic_guard.py  test_entities.py  test_eval_cases.py  test_eval_report.py  test_extraction_pipeline.py  test_fulltext_and_graph_builder.py  test_graph_entities_api.py  test_graph_recursion_fallback.py  test_graph_retrieval.py  test_guardrails_from_config.py  test_guardrails_memory.py  test_p3_ev.py  (+25 more)
web/: index.html
(+155 files in other folders)
