[project]
name = "agentic-graphrag"
version = "0.1.0"
description = "Agentic GraphRAG multi-hop reasoning QA system (POC)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "neo4j>=5.26.0",
    "qdrant-client>=1.12.0",
    "rank-bm25>=0.2.2",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "structlog>=24.4.0",
    "orjson>=3.10.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
agr-ingest = "agentic_graphrag.cli:ingest_main"
agr-build-graph = "agentic_graphrag.cli:build_graph_main"
agr-index = "agentic_graphrag.cli:index_main"
agr-run-cases = "agentic_graphrag.cli:run_cases_main"
agr-run-baseline = "agentic_graphrag.cli:run_baseline_main"
agr-eval = "agentic_graphrag.cli:eval_main"
agr-gen-cases = "agentic_graphrag.cli:gen_cases_main"
agr-pilot-triples = "agentic_graphrag.cli:pilot_triples_main"
agr-badcase = "agentic_graphrag.cli:badcase_main"
agr-query = "agentic_graphrag.cli:query_main"
agr-api = "agentic_graphrag.api.app:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_graphrag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# Coverage gate (P2-ARCH-04 / NFR-09).
# Omitted: CLI entrypoints, LLM HTTP client, Neo4j/Qdrant live adapters, and the
# large offline answer-heuristic module (covered via agent offline E2E-style unit
# tests). Expand unit coverage before removing omit entries.
[tool.coverage.run]
branch = false
source = ["agentic_graphrag"]
omit = [
    "*/agentic_graphrag/cli/*",
    "*/agentic_graphrag/__main__.py",
    "*/agentic_graphrag/stores/neo4j_store.py",
    "*/agentic_graphrag/llm/provider.py",
    "*/agentic_graphrag/generation/answer.py",
    "*/agentic_graphrag/generation/offline_answer.py",
    # Large domain-hardcoded offline heuristics (covered via agent E2E offline tests)
    "*/agentic_graphrag/generation/offline_heuristics.py",
    # Synthetic pilot triple generator (script universe, not runtime path)
    "*/agentic_graphrag/knowledge/pilot_triples.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
